--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		import "./data.js"
 		import "./connectme.js"
 		import "./uis/serverlist.js"
-		import { start } from "./uis/defects.js"
+		import { start } from './uis/defects.js'
 		onload = start
 	</script>
 </html>
