--- a/iframe/index.html
+++ b/iframe/index.html
@@ -62,24 +62,15 @@
 		}
 		//Canvas API sucks
 		C.image = function(img, x, y, w = img.w, h = img.h, ix = 0, iy = 0, ow = img.w, oh = img.h){
-			if(w > 0){
-				if(h < 0){
-					this.drawImage(img.canvas, img.x + ix, img.y + iy, ow, oh, x, y, w, h)
-				}else{
-					this.scale(1,-1)
-					this.drawImage(img.canvas, img.x + ix, img.y + iy, ow, oh, x, -y, w, -h)
-					this.scale(1,-1)
-				}
-			}else if(h < 0){
-				this.scale(-1,1)
-				this.drawImage(img.canvas, img.x + ix, img.y + iy, ow, oh, -x, y, -w, h)
-				this.scale(-1,1)
-			}else{
-				this.scale(-1,-1)
-				this.drawImage(img.canvas, img.x + ix, img.y + iy, ow, oh, -x, -y, -w, -h)
-				this.scale(-1,-1)
-			}
-			if(this.trace) this.rect(x, y, w, h)
+			this.scale(1,-1)
+			this.drawImage(img.canvas, img.x + ix, img.y + iy, ow, oh, x, -y, w, -h)
+			this.scale(1,-1)
+		}
+		C.imageTrace = function(img, x, y, w = img.w, h = img.h, ix = 0, iy = 0, ow = img.w, oh = img.h){
+			this.scale(1,-1)
+			this.drawImage(img.canvas, img.x + ix, img.y + iy, ow, oh, x, -y, w, -h)
+			this.scale(1,-1)
+			this.rect(x, y, w, h)
 		}
 		C.measureText = function(txt, s = 1){
 			const {actualBoundingBoxLeft: left, actualBoundingBoxRight: right, actualBoundingBoxAscent: top, actualBoundingBoxDescent: bottom, width} = _measureTxt.call(this, txt)
@@ -115,7 +106,6 @@
 		C.resize = function(w, h){
 			this.canvas.width = this.w = w
 			this.canvas.height = this.h = h
-			this.trace = false
 			this.transforms.length = 0
 		}
 		C.crop = function(x, y, w, h){ return new _txtr(this.canvas, x, y, w, h) }
@@ -161,7 +151,6 @@
 		c.canvas.width = c.w = w; c.canvas.height = c.h = h
 		c.transforms = []
 		c.x = c.y = 0
-		c.trace = 0
 		return c
 	}
 	const {random, abs, min, max, round, floor, ceil, ifloat, fclamp, sqrt, cbrt, atan2, sign, sin, cos, tan, PI, PI2 = PI * 2, imul } = Math
@@ -226,7 +215,7 @@ const loader = (meta) => {
 					buf = []
 					fetch(folder + src, {credentials: 'omit', priority: 'low'}).then(a => a.arrayBuffer()).then(a => _actx.decodeAudioData(a, b => {
 						const l = buf; buf = b
-						for(let i = 0; i < l.length; i++) l[i][0] = play(...l[i])
+						for(let i = 0; i < l.length; i++) l[i][0] = play(...l[i]), l[i].length = 1
 					}))
 				}
 				if(Array.isArray(buf)){
@@ -280,7 +269,7 @@ const loader = (meta) => {
 	let download, listen, buttons, changed
 	let loading = 1, loaded = null, dt = 1 / 60, pointer
 	let t = 0, TPS = 20
-	let meid = -1, r = 0, me = null
+	let meid = -1, r = 0, me = null, perms = 2
 	let ticks = 0, world = '', gx = 0, gy = 0
 	let mx = 0, my = 0
 	let DataReader, DataWriter
