--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		import "./ui.js"
 		import "./save.js"
 		import "./iframe.js"
-		import "./data.js"
+		import "https://unpkg.com/dataproto/index.js"
 		import "./connectme.js"
 		import "./uis/serverlist.js"
 		import { start } from './uis/defects.js'
