refactor to Uint16Array chunks

--- a/iframe/index.html
+++ b/iframe/index.html
@@ -170,7 +170,8 @@ const LBUTTON = 0, RBUTTON = 2, MBUTTON = 1, KEYS = {
 	PLUS: 187, OPENBR: 219, CLOSEBR: 221, SEMICOLON: 186, APOS: 222, BACKSLASH: 220, COMMA: 188,
 	DOT: 190, SLASH: 191
 }, GAMEPAD = {
-	A: 256, B: 257, X: 258, Y: 259, LB: 260, RB: 261, LT: 262, RT: 263, UP: 268, DOWN: 269, LEFT: 270, RIGHT: 271
+	A: 256, B: 257, X: 258, Y: 259, LB: 260, RB: 261, LT: 262, RT: 263, UP: 268, DOWN: 269, LEFT: 270, RIGHT: 271,
+	MENU: 300
 }
 Object.freeze(KEYS)
 
