--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html spellcheck="false" autocomplete="off" autocapitalize="off" lang="en" ontouchend="getSelection().removeAllRanges();event.preventDefault();if('value' in event.target)event.target.focus();event.target.dispatchEvent(new MouseEvent('click', event.changedTouches[0]))" oncontextmenu="event.preventDefault();" onwheel="if(event.ctrlKey)event.preventDefault()">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover">
 		<link href="style.css" rel="stylesheet">
 		<meta property="og:title" content="Paper Minecraft" />
 		<meta property="og:image" content="https://openmc.pages.dev/img/icon.png" />
