--- a/iframe/index.html
+++ b/iframe/index.html
@@ -12,7 +12,7 @@
 <style>
 	@font-face {
 		font-family: mc;
-		src: url('../font.ttf') format('truetype');
+		src: url('../img/font.ttf') format('truetype');
 		font-weight: normal;
 		font-style: normal;
 	}
