--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	</head>
 	<body>
 		<script>
-			const go = () => pr && (pr.then(() => null),pr=undefined)
+			const go = () => pr && (pr.then(() => location = '/app.html'),pr=undefined)
 			let pr = Promise.resolve(undefined)
-			if('serviceWorker' in navigator){
+			if('serviceWorker' in navigator && !/\.?localhost$|^(127.0.0.1|0.0.0.0)$/.test(location.host)){
 				pr = navigator.serviceWorker.ready
 				navigator.serviceWorker.register('./sw.js', {type: 'module', updateViaCache: 'all'})
 			}
@@ -44,7 +44,7 @@
 			<span>This game is currently for testers only</span>
 			<span>Join our <a href="https://discord.gg/ufaHZXtnab" style="color: #5AE">Discord</a> to get an account key</span>
 			<span></span>
-			<span style="width: 205rem;max-width: 100%;"><input style="border: 2px #fff solid; background: #000; padding: 8px; color: white" placeholder="Account key" oninput="gotKey(this.value).then(a >a?go():this.style.color = 'red')"></span>
+			<span style="width: 205rem;max-width: 100%;"><input style="border: 2px #fff solid; background: #000; padding: 8px; color: white" placeholder="Account key" oninput="gotKey(this.value).then(a=>a?go():this.style.color = 'red')"></span>
 		</div>
 	</body>
 </html>
